mylang/tests/success/f2.pas
program

function less(var i, j: int, b: bool): bool
begin
    less := true
end;

begin
    writeln(less(1,2,true))
end@




